# EspCodeBase

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/GUI/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/GUI/DemoProc/inc/: DemoActions.h  DemoProc.h  DemoResource_ASCII.h  DemoResource_GB2312.h  DemoResource_UTF8.h  Resource.h
components/GUI/DemoProc/src/: Basic.c  Curve.c  DemoProc.c  List.c  Menu.c  Notice.c  PolarCoordinates.c  RealtimeGraph.c  Resource.c  Text.c  VariableBox.c
components/GUI/GUI/inc/: SGUI_Basic.h  SGUI_Common.h  SGUI_Config.h  SGUI_Curve.h  SGUI_FontResource.h  SGUI_Graph.h  SGUI_IconResource.h  SGUI_Interface.h  SGUI_ItemsBase.h  SGUI_List.h  SGUI_Menu.h  SGUI_Notice.h  SGUI_PolarCoordinates.h  SGUI_ProcessBar.h  SGUI_RealtimeGraph.h  SGUI_ScrollBar.h  SGUI_Text.h  SGUI_Typedef.h  SGUI_VariableBox.h
components/GUI/GUI/src/: SGUI_Basic.c  SGUI_Common.c  SGUI_Curve.c  SGUI_FontResource.c  SGUI_IconResource.c  SGUI_Interface.c  SGUI_ItemsBase.c  (+9 more)
components/GUI/inc/: DemoProc.h  HMI_Engine.h  SGUI_Config.h  SGUI_Typedef.h
components/GUI/src/: DemoProc.c  HMI_Engine.c  List.c  MainScreen.c  Notice.c  PolarCoordinates.c  Resource.c  SGUI_Curve.c  SGUI_FontResource.c  SGUI_Notice.c  VariableBox.c
components/ssd1306_x/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/ssd1306_x/example/: driver_ssd1306_basic.c  driver_ssd1306_basic.h
components/ssd1306_x/interface/: driver_ssd1306_interface.c  driver_ssd1306_interface.h
components/ssd1306_x/src/: driver_ssd1306.c  driver_ssd1306.h
(+55 files in other folders)
